Add TextBox page

--- a/static/preloader.html
+++ b/static/preloader.html
@@ -20,11 +20,11 @@
   </head>
   <body>
     <div>
-     <!--  <img
-        src=""
+      <img
+        src="./loading.webp"
         width="300px"
         height="300px"
-      /> -->
+      />
     </div>
   </body>
 </html>
